[package]
name = "stacker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
macroquad = "0.4.14"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
